--- a/public/css/style.css
+++ b/public/css/style.css
@@ -478,3 +478,74 @@ h4{
     font-weight: 400;
     margin-bottom: 20px;
 }
+
+
+/* LANDING PAGE */
+.landing__page{
+    background-image: url(../img/GATE_IMAGE_OPT.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.landing__page:before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+}
+
+.landing__page .landing__page__content{
+    width: 100%;
+    max-width: 500px;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+    color: #fff;
+}
+
+.landing__page .logo {
+    width: 100%;
+    max-width: 260px;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+.landing__page__title{
+    font-size: 45px !important;
+    line-height: 55px !important;
+}
+
+.landing__page__description i{
+    font-weight: 400;
+    color: #F9D55D;
+}
+
+.landing_page__social_icons{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}   
+
+.landing_page__social_icons li{
+    margin-right: 10px;
+}
+
+.landing_page__social_icons li a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 400;
+}
